--- a/SmartContactManager/src/main/resources/templates/base.html
+++ b/SmartContactManager/src/main/resources/templates/base.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-		<a class="navbar-brand" href="#">SmartContactManager</a>
+		<a class="navbar-brand" th:href="@{/}" href="#">SmartContactManager</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -34,7 +34,7 @@
 				
 				<li class="nav-item"><a class="nav-link" th:href="@{/about}" href="#">About</a></li>
 				
-				<li class="nav-item"><a class="nav-link" th:href="@{/}" href="#">Login</a></li>
+				<li class="nav-item"><a class="nav-link" th:href="@{/login}" href="#">Login</a></li>
 				
 				<li class="nav-item"><a class="nav-link" th:href="@{/signup}" href="#">Signup</a></li>
 			</ul>
