--- a/SmartContactManager/src/main/resources/templates/signup.html
+++ b/SmartContactManager/src/main/resources/templates/signup.html
@@ -7,14 +7,47 @@
 </head>
 <body>
 	<section>
-		<h1>SignUp Page</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-			Recusandae fugit libero alias adipisci magni neque reiciendis
-			eligendi ipsum eos commodi quos debitis mollitia maiores officiis
-			blanditiis repellat reprehenderit error similique suscipit obcaecati
-			ex aliquam temporibus fugiat natus ipsa. Excepturi optio deserunt
-			accusantium possimus dolorum placeat consequatur libero error fugiat
-			repellendus.</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 offset-md-2">
+					<div class="my-card mt-2">
+						<div class="container text-center">
+							<img class=" " style="width: 80px;" src="" th:src="@{/images/note.png}" alt="" />
+						</div>
+						<h1 class="text-center">SignUp Here</h1>
+						<form action="" th:action="@{/do_register}" method="post">
+						
+							<div class="form-group">
+							    <label for="name">Your Name</label>
+							    <input type="text" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Enter Here" required>
+							 </div>
+							 
+							 <div class="form-group">
+							    <label for="email">Your Email</label>
+							    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter Here" required>
+							 </div>
+							 
+							 <div class="form-group">
+							    <label for="password">Your Password</label>
+							    <input type="password" class="form-control" id="password" aria-describedby="emailHelp" placeholder="Enter Here" required>
+							 </div>
+							 
+							 <div class="form-group">
+							 	<textarea placeholder="Enter Something Yourself" rows="5" class="form-control"></textarea>
+							 </div>
+							 
+							 <div class="container text-center">
+							 	<button type="submit" class="btn bg-success text-white">Submit</button>
+							 	
+							 	<button type="reset" class="btn bg-danger text-white">Reset</button>
+							 </div>
+							 
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 </body>
 </html>
+
