--- a/SmartContactManager/src/main/resources/templates/signup.html
+++ b/SmartContactManager/src/main/resources/templates/signup.html
@@ -1,53 +1,67 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-	th:replace="base::layout(~{::section})">
+      th:replace="base::layout(~{::section})">
 <head>
-<meta charset="UTF-8" />
-<title>SignUp</title>
+    <meta charset="UTF-8" />
+    <title>SignUp</title>
 </head>
 <body>
-	<section>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 offset-md-2">
-					<div class="my-card mt-2">
-						<div class="container text-center">
-							<img class=" " style="width: 80px;" src="" th:src="@{/images/note.png}" alt="" />
-						</div>
-						<h1 class="text-center">SignUp Here</h1>
-						<form action="" th:action="@{/do_register}" method="post">
-						
-							<div class="form-group">
-							    <label for="name">Your Name</label>
-							    <input type="text" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Enter Here" required>
-							 </div>
-							 
-							 <div class="form-group">
-							    <label for="email">Your Email</label>
-							    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter Here" required>
-							 </div>
-							 
-							 <div class="form-group">
-							    <label for="password">Your Password</label>
-							    <input type="password" class="form-control" id="password" aria-describedby="emailHelp" placeholder="Enter Here" required>
-							 </div>
-							 
-							 <div class="form-group">
-							 	<textarea placeholder="Enter Something Yourself" rows="5" class="form-control"></textarea>
-							 </div>
-							 
-							 <div class="container text-center">
-							 	<button type="submit" class="btn bg-success text-white">Submit</button>
-							 	
-							 	<button type="reset" class="btn bg-danger text-white">Reset</button>
-							 </div>
-							 
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <div class="my-card mt-2">
+                    
+                        <!-- Session Message Handling -->
+                        <div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+                            <p class="text-center" th:text="${session.message.content}"></p>
+                            <th:block th:remove="all"></th:block>
+                        </div>
+
+                        <div class="container text-center">
+                            <img style="width: 80px;" th:src="@{/images/note.png}" alt="Logo" />
+                        </div>
+                        <h1 class="text-center">SignUp Here</h1>
+
+                        <form th:action="@{/do_register}" method="post" th:object="${user}">
+                        
+                            <div class="form-group">
+                                <label for="name">Your Name</label>
+                                <input name="name" th:field="*{name}" type="text" class="form-control" id="name" placeholder="Enter Here" required>
+                            </div>
+                             
+                            <div class="form-group">
+                                <label for="email">Your Email</label>
+                                <input name="email" th:field="*{email}" type="email" class="form-control" id="email" placeholder="Enter Here" required>
+                            </div>
+                             
+                            <div class="form-group">
+                                <label for="password">Your Password</label>
+                                <input name="password" th:field="*{password}" type="password" class="form-control" id="password" placeholder="Enter Here" required>
+                            </div>
+                             
+                            <div class="form-group">
+                                <label for="about">About You</label>
+                                <textarea name="about" th:field="*{about}" placeholder="Enter Something About Yourself" rows="5" class="form-control"></textarea>
+                            </div>
+                             
+                            <div class="form-group form-check text-center">
+                                <input type="checkbox" id="agreement" class="form-check-input" name="agreement"/>
+                                <label for="agreement">Accept Terms and Conditions</label>
+                            </div>
+                             
+                            <div class="container text-center">
+                                <button type="submit" class="btn bg-success text-white">Submit</button>
+                                <button type="reset" class="btn bg-danger text-white">Reset</button>
+                            </div>
+                             
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
-
+					
+							 
