--- a/SmartContactManager/src/main/resources/templates/login.html
+++ b/SmartContactManager/src/main/resources/templates/login.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	th:replace="base::layout(~{::section})">
 <head>
@@ -17,4 +17,4 @@
 			repellendus.</p>
 	</section>
 </body>
-</html>
+</html> -->
