--- a/SmartContactManager/src/main/resources/templates/base.html
+++ b/SmartContactManager/src/main/resources/templates/base.html
@@ -34,7 +34,7 @@
 				
 				<li class="nav-item"><a class="nav-link" th:href="@{/about}" href="#">About</a></li>
 				
-				<li class="nav-item"><a class="nav-link" th:href="@{/login}" href="#">Login</a></li>
+				<li class="nav-item"><a class="nav-link"  href="/user/index">Login</a></li>
 				
 				<li class="nav-item"><a class="nav-link" th:href="@{/signup}" href="#">Signup</a></li>
 			</ul>
