--- a/SmartContactManager/src/main/resources/templates/user/base.html
+++ b/SmartContactManager/src/main/resources/templates/user/base.html
@@ -12,7 +12,12 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
 	integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
 	crossorigin="anonymous">
-	
+
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+	integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+	crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <link rel="stylesheet" th:href="@{/css/style.css}" media="all" />
 
 <title th:text="${title}">Base Page</title>
@@ -39,7 +44,28 @@
 		</div>
 	</nav>
 
-	<div th:replace="${content}"></div>
+	<!-- sidebar -->
+	<div class="sidebar">
+		
+		<span onclick="toggleSidebar()" class="crossBtn">&times;</span>
+		
+		<a href="#" class="item"> <i class="fas fa-home"></i> Home</a>
+		<a href="#" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
+		<a href="#" class="item"> <i class="fas fa-pencil-alt"></i> Add Contacts</a>
+		<a href="#" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
+		<a href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
+		<a href="#" class="item"> <i class="fas fa-sign-out-alt"></i> Logout</a>
+		<div class="divider"></div>
+	</div>
+	
+	<!-- content -->
+	<div class="content">
+	
+		<i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
+	
+		<div th:replace="${content}"></div>
+		
+	</div>
 
 
 
