--- a/SmartContactManager/src/main/resources/static/css/style.css
+++ b/SmartContactManager/src/main/resources/static/css/style.css
@@ -35,6 +35,28 @@ body{
 }
 
 @media only screen and (max-width:600px) {
+	/* Navbar */
+    .navbar-brand {
+        font-size: 16px;
+    }
+
+    .navbar-nav {
+        text-align: center;
+    }
+
+    .nav-item {
+        margin-bottom: 5px;
+    }
+
+    .navbar-toggler {
+        padding: 5px 10px;
+    }
+
+    .navbar-toggler-icon {
+        width: 24px;
+        height: 24px;
+    }
+	
 	.sidebar{
 		display: none;
 		width: 80% !important;
@@ -46,14 +68,24 @@ body{
 	.content{
 		margin-left: 0% !important;
 	}
+	
+	.sidebar .crossBtn {
+        font-size: 20px;
+    }
 }
+
+
+/* Responsive Design End */
+
+
 
 .sidebar{
 	width: 18%;
 	height: 100%;
 	background: white;
 	position: fixed;
-	padding-top: 45px;a
+	padding-top: 45px;
+	z-index: 999999999999999999999999999;
 }
 
 .sidebar a{
