--- a/SmartContactManager/src/main/resources/templates/user/base.html
+++ b/SmartContactManager/src/main/resources/templates/user/base.html
@@ -23,7 +23,7 @@
 <title th:text="${title}">Base Page</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+	<nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-primary">
 		<a class="navbar-brand" th:href="@{/}" href="#">SmartContactManager</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarSupportedContent"
@@ -45,21 +45,21 @@
 	</nav>
 
 	<!-- sidebar -->
-	<div class="sidebar">
+	<div class="sidebar mt-3">
 		
 		<span onclick="toggleSidebar()" class="crossBtn">&times;</span>
 		
-		<a href="#" class="item"> <i class="fas fa-home"></i> Home</a>
+		<a href="#" th:href="@{/user/index}" class="item"> <i class="fas fa-home"></i> Home</a>
 		<a href="#" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
-		<a href="#" class="item"> <i class="fas fa-pencil-alt"></i> Add Contacts</a>
+		<a href="#" th:href="@{/user/addContact}" class="item"> <i class="fas fa-pencil-alt"></i> Add Contacts</a>
 		<a href="#" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
 		<a href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
-		<a href="#" class="item"> <i class="fas fa-sign-out-alt"></i> Logout</a>
+		<a href="#" th:href="@{/logout}" class="item"> <i class="fas fa-sign-out-alt"></i> Logout</a>
 		<div class="divider"></div>
 	</div>
 	
 	<!-- content -->
-	<div class="content">
+	<div class="content mt-5">
 	
 		<i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
 	
