--- a/SmartContactManager/src/main/resources/templates/user/addContact.html
+++ b/SmartContactManager/src/main/resources/templates/user/addContact.html
@@ -73,7 +73,7 @@
 								
 								<!-- Contact Image -->
 								<div class="custom-file">
-									<input type="file" name="image" />
+									<input type="file" name="imageFile" />
 								</div>
 								
 								<div class="container text-center mt-2">
