--- a/SmartContactManager/src/main/resources/templates/user/base.html
+++ b/SmartContactManager/src/main/resources/templates/user/base.html
@@ -63,6 +63,14 @@
 	
 		<i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
 	
+		<div th:if="${session.message}" class="container">
+			<div th:classappend="${'alert-'+session.message.type}" class="alert text-center" role="alert">
+		  		<span th:text="${session.message.content}" ></span>
+			</div>
+			<!-- After show message delete the message -->
+			<th:block th:text="${#session.removeAttribute('message')}" ></th:block>
+		</div>
+	
 		<div th:replace="${content}"></div>
 		
 	</div>
