--- a/SmartContactManager/src/main/resources/templates/user/base.html
+++ b/SmartContactManager/src/main/resources/templates/user/base.html
@@ -50,7 +50,7 @@
 		<span onclick="toggleSidebar()" class="crossBtn">&times;</span>
 		
 		<a href="#" th:href="@{/user/index}" class="item"> <i class="fas fa-home"></i> Home</a>
-		<a href="#" th:href="@{/user/showContact}" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
+		<a href="#" th:href="@{/user/showContact/0}" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
 		<a href="#" th:href="@{/user/addContact}" class="item"> <i class="fas fa-pencil-alt"></i> Add Contacts</a>
 		<a href="#" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
 		<a href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
