--- a/SmartContactManager/src/main/resources/templates/user/showContact.html
+++ b/SmartContactManager/src/main/resources/templates/user/showContact.html
@@ -37,6 +37,24 @@
 					  </tbody>
 					</table>
 					
+					<nav aria-label="Page navigation example">
+					
+					  <ul class="pagination">
+					  
+					    <li th:if="${currentPage != 0}" class="page-item">
+					    	<a th:href="@{'/user/showContact/'+${currentPage-1}}" class="page-link" href="#">Previous</a></li>
+
+						<li th:classappend="${currentPage==i-1 ? 'active' : ' '}"
+							th:each="i : ${#numbers.sequence( 1, totalPages)}"
+							class="page-item">
+							<a class="page-link" th:href="@{'/user/showContact/'+${i-1}}" href="#"><span th:text="${i}"></span></a></li>
+
+						<li th:if="${currentPage+1 != totalPages}" class="page-item">
+							<a th:href="@{'/user/showContact/'+${currentPage+1}}" class="page-link" href="#">Next</a></li>
+							
+					  </ul>
+					</nav>
+					
 				</div>
 			</div>
 	</section>
