--- a/SmartContactManager/src/main/resources/static/css/style.css
+++ b/SmartContactManager/src/main/resources/static/css/style.css
@@ -119,4 +119,12 @@ body{
 	cursor:pointer;
 }
 
+.my_profile_picture{
+	width: 35px;
+	height: 35px;
+	object-fit: cover;
+	border-radius:50%;
+}
+
+
 
