--- a/SmartContactManager/src/main/resources/templates/user/showContact.html
+++ b/SmartContactManager/src/main/resources/templates/user/showContact.html
@@ -26,10 +26,17 @@
 					    <tr th:each="c : ${contacts}" >
 					      <th scope="row" th:text="${'SCMUSER'+c.cId}">1</th>
 					      <td>
-					      		<img class="my_profile_picture" th:src="@{'/images/'+${c.image}}" alt="profile image" />
-					      		<span th:text="${c.name}" ></span>
+					      		<a th:href="@{'/user/' + ${c.cId} + '/contact'}">
+								    <img class="my_profile_picture" th:src="@{'/images/' + ${c.image}}" alt="profile image" />
+								</a>
+								<span th:text="${c.name}" ></span>
 					      </td>
-					      <td th:text="${c.email}">pranavmahajan510@gmail.com</td>
+					      <td>
+					      		<!-- <a href="" th:href="@{'/user/contact/'+${c.cId}}"> -->
+					      		<a href="" th:href="@{'/user/'+${c.cId}+'/contact'}">
+					      			<span th:text="${c.email}"></span>
+					      		</a>
+					      </td>
 					      <td th:text="${c.phone}">+91 8329401951</td>
 					      <td>
 					      	<button class="btn btn-danger btn-sm">Delete</button>
