--- a/SmartContactManager/src/main/resources/templates/user/contactDetail.html
+++ b/SmartContactManager/src/main/resources/templates/user/contactDetail.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<section>
-		<div class="card mr-3 ml-3">
-			<div class="card-body">
+		<div class="card mr-3 ml-3" th:if="${contact}">
+			<div class="card-body" >
 				<div class="container text-center">
 					   <img style="height: 200px; width: 200px;" class="my_profile_picture" th:src="@{'/images/'+${contact.image}}" alt="profile image" />
 					   
@@ -53,6 +53,9 @@
 				</div>
 			</div>
 		</div>
+			
+			<h1 class="text-center p-5 bg-danger text-white" th:unless="${contact}" >You don't have permission to see this contact...</h1>
+		
 	</section>
 </body>
 </html>
