--- a/SmartContactManager/src/main/resources/templates/user/base.html
+++ b/SmartContactManager/src/main/resources/templates/user/base.html
@@ -81,10 +81,36 @@
 
 	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 	<script th:src="@{/js/script.js}"></script>
+	
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	
+	<script>
+	
+		function deleteContact(cid){
+			swal({
+				  title: "Are you sure?",
+				  text: "you want to delete this contact..",
+				  icon: "warning",
+				  buttons: true,
+				  dangerMode: true,
+				})
+				.then((willDelete) => {
+				  if (willDelete) {
+				    
+					  window.location="/user/delete/"+cid;
+					  
+				  } else {
+				    swal("Your contact is safe!");
+				  }
+				});
+			}
+	</script>
+	
 	<script
 		src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 		crossorigin="anonymous"></script>
+		
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
