--- a/SmartContactManager/src/main/resources/templates/user/contactDetail.html
+++ b/SmartContactManager/src/main/resources/templates/user/contactDetail.html
@@ -47,7 +47,7 @@
 						</div>
 						
 						<div class="container mt-3">
-					      	<button class="btn btn-danger btn-sm">Delete</button>
+					      	<button th:onclick="|deleteContact(${contact.cId})|"  class="btn btn-danger btn-sm">Delete</button>
 					      	<button class="btn btn-primary btn-sm">Update</button>
 						</div>
 				</div>
