--- a/SmartContactManager/src/main/resources/templates/user/contactDetail.html
+++ b/SmartContactManager/src/main/resources/templates/user/contactDetail.html
@@ -47,8 +47,13 @@
 						</div>
 						
 						<div class="container mt-3">
-					      	<button th:onclick="|deleteContact(${contact.cId})|"  class="btn btn-danger btn-sm">Delete</button>
-					      	<button class="btn btn-primary btn-sm">Update</button>
+						
+					      	<button th:onclick="|deleteContact(${contact.cId})|"  class="btn btn-danger btn-block">Delete</button>
+					      	
+					      	<form method="post" class="mt-2" th:action="@{'/user/updateContact/'+${contact.cId}}" >
+					      		<button type="submit" class="btn btn-primary btn-block">Update</button>
+					      	</form>
+					      	
 						</div>
 				</div>
 			</div>
