--- a/SmartContactManager/src/main/resources/templates/user/user_dashboard.html
+++ b/SmartContactManager/src/main/resources/templates/user/user_dashboard.html
@@ -7,7 +7,31 @@
 </head>
 <body>
 	<section>
-		<h1>Welcome To Dashboard</h1>
+			<div class="container">
+				<div class="card">
+					<div class="card-body my-5">
+						<div class="container text-center">
+
+						<img style="height: 200px; width: 200px;"
+							class="my_profile_picture"
+							th:src="@{/images/contactDashboard.png}" alt="profile image" />
+
+					</div>
+					
+					<h1 class="text-center mt-3 text-secondary font-italic font-weight-light">
+						Start Adding Your Contact On Cloud!
+					</h1>
+					
+					<a th:href="@{/user/addContact}" class="btn btn-primary mt-4 btn-block text-uppercase">Add New Contact</a>
+					</div>
+				</div>
+			</div>
+	
+	
+	
+	
+	
+		<!-- <h1>Welcome To Dashboard</h1>
 		<h1>You are normal user</h1>
 		<h1>User Name : <span th:text="${user.name}"></span></h1>
 		<h1>User Id : <span th:text="${user.id}"></span></h1>
@@ -18,7 +42,7 @@
 		<h1>User ImageUrl : <span th:text="${user.imageUrl}"></span></h1>
 		<h1>User About : <span th:text="${user.about}"></span></h1>
 		<h1>User Contracts : <span th:text="${user.contacts}"></span></h1>
-		<h1><a href="" th:href="@{/logout}" >Logout</a></h1>
+		<h1><a href="" th:href="@{/logout}" >Logout</a></h1> -->
 	</section>
 </body>
 </html>
