--- a/SmartContactManager/src/main/resources/templates/user/showContact.html
+++ b/SmartContactManager/src/main/resources/templates/user/showContact.html
@@ -11,6 +11,16 @@
 				<div class="card-body">
 					<h1 class="text-center">Your Contacts</h1>
 					
+					<!-- search -->
+					<div class="search-container my-4">
+						<input id="search-input" type="text" class="form-control" placeholder="Search Your Contact Here" />
+						
+						<div class="search-result">
+							<!-- result goes here -->
+						</div>
+					</div>
+		
+					
 					<table class="table">
 					  <thead class="thead-dark">
 					    <tr>
