--- a/SmartContactManager/src/main/resources/templates/user/showContact.html
+++ b/SmartContactManager/src/main/resources/templates/user/showContact.html
@@ -13,10 +13,11 @@
 					
 					<!-- search -->
 					<div class="search-container my-4">
-						<input id="search-input" type="text" class="form-control" placeholder="Search Your Contact Here" />
+						<input onkeyup="search()" id="search-input" type="text" class="form-control" placeholder="Search Your Contact Here" />
 						
 						<div class="search-result">
 							<!-- result goes here -->
+							<!-- <h5>this is result</h5> -->
 						</div>
 					</div>
 		
