--- a/SmartContactManager/src/main/resources/static/css/style.css
+++ b/SmartContactManager/src/main/resources/static/css/style.css
@@ -139,3 +139,17 @@ body{
 	border: 1px solid gray;
 	display: none;
 }
+
+
+.active{
+	background: #009688 !important;
+	color:white !important;
+}
+
+
+
+
+
+
+
+
