--- a/SmartContactManager/src/main/resources/templates/user/addContact.html
+++ b/SmartContactManager/src/main/resources/templates/user/addContact.html
@@ -94,6 +94,13 @@
 	            selector: '#mytextarea'
 	        });
 	    </script>
+	    
+	    <script>
+			$(document).ready(() => {
+				$(".item").removeClass("active");
+				$("#add-link").addClass("active");
+			});
+		</script>
     	
 	</section>
 </body>
