--- a/SmartContactManager/src/main/resources/templates/user/base.html
+++ b/SmartContactManager/src/main/resources/templates/user/base.html
@@ -21,6 +21,13 @@
 <link rel="stylesheet" th:href="@{/css/style.css}" media="all" />
 
 <title th:text="${title}">Base Page</title>
+
+<script
+		src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+
+
 </head>
 <body>
 	<nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-primary">
@@ -49,11 +56,11 @@
 		
 		<span onclick="toggleSidebar()" class="crossBtn">&times;</span>
 		
-		<a href="#" th:href="@{/user/index}" class="item"> <i class="fas fa-home"></i> Home</a>
-		<a href="#" th:href="@{/user/showContact/0}" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
-		<a href="#" th:href="@{/user/addContact}" class="item"> <i class="fas fa-pencil-alt"></i> Add Contacts</a>
-		<a href="#" th:href="@{/user/profile}" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
-		<a href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
+		<a id="home-link" href="#" th:href="@{/user/index}" class="item"> <i class="fas fa-home"></i> Home</a>
+		<a id="contacts-link" href="#" th:href="@{/user/showContact/0}" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
+		<a id="add-link" href="#" th:href="@{/user/addContact}" class="item"> <i class="fas fa-pencil-alt"></i> Add Contacts</a>
+		<a id="profile-link" href="#" th:href="@{/user/profile}" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
+		<a id="settings-link" href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
 		<a href="#" th:href="@{/logout}" class="item"> <i class="fas fa-sign-out-alt"></i> Logout</a>
 		<div class="divider"></div>
 	</div>
@@ -106,10 +113,7 @@
 			}
 	</script>
 	
-	<script
-		src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-		crossorigin="anonymous"></script>
+	
 		
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
