--- a/SmartContactManager/src/main/resources/templates/user/contactDetail.html
+++ b/SmartContactManager/src/main/resources/templates/user/contactDetail.html
@@ -14,6 +14,7 @@
 					   
 					   <h3 class="mt-3"> <span  th:text="${contact.name}"></span> (<span  th:text="${contact.nickName}"></span>) </h3>
 					   
+					   <div class="table-responsive">
 					   <table class="table">
 						  <thead class="thead-primary">
 						    <tr>
@@ -41,6 +42,7 @@
 						    </tr>
 						  </tbody>
 						</table>
+						</div>
 						
 						<div class="description ">
 						      <th:block th:utext="${contact.description}"></th:block>
