--- a/SmartContactManager/src/main/resources/templates/user/profile.html
+++ b/SmartContactManager/src/main/resources/templates/user/profile.html
@@ -18,6 +18,7 @@
 						</div>
 						
 							<h1 class="text-center mt-3" th:text="${user.name}"></h1>
+							<div class="table-responsive">
 							<table class="table text-center">
 						  <thead class="thead-primary">
 						    <tr>
@@ -47,11 +48,19 @@
 						    </tr>
 						  </tbody>
 						</table>
+						</div>
 						
 						<!-- if you want you add delete and update button -->
 						</div>
 					</div>
 			</div>
+			
+			<script>
+			$(document).ready(() => {
+				$(".item").removeClass("active");
+				$("#profile-link").addClass("active");
+			});
+		</script>
 	</section>
 </body>
 </html>
