--- a/SmartContactManager/src/main/resources/templates/user/base.html
+++ b/SmartContactManager/src/main/resources/templates/user/base.html
@@ -60,10 +60,10 @@
 		<a id="contacts-link" href="#" th:href="@{/user/showContact/0}" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
 		<a id="add-link" href="#" th:href="@{/user/addContact}" class="item"> <i class="fas fa-pencil-alt"></i> Add Contacts</a>
 		<a id="profile-link" href="#" th:href="@{/user/profile}" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
-		<a id="settings-link" href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
+		<a id="settings-link" href="#" th:href="@{/user/settings}" class="item"> <i class="fas fa-cogs"></i> Settings</a>
 		<a href="#" th:href="@{/logout}" class="item"> <i class="fas fa-sign-out-alt"></i> Logout</a>
 		<div class="divider"></div>
-	</div>
+	</div> 
 	
 	<!-- content -->
 	<div class="content mt-5">
