--- a/SmartContactManager/src/main/resources/templates/login.html
+++ b/SmartContactManager/src/main/resources/templates/login.html
@@ -41,6 +41,10 @@
 								<div id="register-link" class="text-right">
 									<a href="/signup/" class="text-info">Register here</a>
 								</div>
+								
+								<div class="container text-center">
+									<a class="text-info" th:href="@{/forgot}">Forgot Password?</a>
+								</div>
 							</form>
 						</div>
 					</div>
