--- a/SmartContactManager/src/main/resources/templates/forgotEmailForm.html
+++ b/SmartContactManager/src/main/resources/templates/forgotEmailForm.html
@@ -13,6 +13,16 @@
 					class="row justify-content-center align-items-center">
 					<div id="login-column" class="col-md-6">
 						<div id="login-box" style="height: 200px;" class="col-md-12">
+						
+							<!-- Message Box -->
+							<div th:if="${session.message}" class="container">
+								<div  class="alert alert-danger text-center my-2" role="alert">
+							  		<span th:text="${session.message}" ></span>
+								</div>
+								<!-- After show message delete the message -->
+								<th:block th:text="${#session.removeAttribute('message')}" ></th:block>
+							</div>
+						
 							<!-- email form -->
 							<h3 class="text-center m-3">Your Registered Email</h3>
 							
