--- a/SmartContactManager/src/main/resources/templates/user/base.html
+++ b/SmartContactManager/src/main/resources/templates/user/base.html
@@ -70,6 +70,7 @@
 	
 		<i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
 	
+		<!-- Message Box -->
 		<div th:if="${session.message}" class="container">
 			<div th:classappend="${'alert-'+session.message.type}" class="alert text-center" role="alert">
 		  		<span th:text="${session.message.content}" ></span>
