--- a/SmartContactManager/src/main/resources/templates/forgotEmailForm.html
+++ b/SmartContactManager/src/main/resources/templates/forgotEmailForm.html
@@ -12,7 +12,7 @@
 				<div id="login-row"
 					class="row justify-content-center align-items-center">
 					<div id="login-column" class="col-md-6">
-						<div id="login-box" style="height: 200px;" class="col-md-12">
+						<div id="login-box" style="height: 220px;" class="col-md-12">
 						
 							<!-- Message Box -->
 							<div th:if="${session.message}" class="container">
@@ -28,7 +28,7 @@
 							
 							<form method="post" th:action="@{/sendOtp}">
 								<div class="form-group">
-								<input name="email" required="required" type="email" class="form-control" placeholder="Enter email here"/>
+								<input required="required" type="email" name="email" class="form-control" placeholder="Enter email here"/>
 								
 								</div>
 								
