--- a/SmartContactManager/src/main/resources/templates/verifyOtp.html
+++ b/SmartContactManager/src/main/resources/templates/verifyOtp.html
@@ -12,12 +12,23 @@
 				<div id="login-row"
 					class="row justify-content-center align-items-center">
 					<div id="login-column" class="col-md-6">
-						<div id="login-box" style="height: 200px;" class="col-md-12">
+						<div id="login-box" style="height: 250px;" class="col-md-12">
 							<!-- email form -->
 							<div class="alert alert-success mt-3 text-center" role="alert">
 							  We have sent OTP to your email
 							</div>
-							<form method="post" th:action="@{/sendOtp}">
+							
+							<!-- Message Box -->
+							<div th:if="${session.message}" class="container">
+								<div  class="alert alert-danger text-center my-2" role="alert">
+							  		<span th:text="${session.message}" ></span>
+								</div>
+								<!-- After show message delete the message -->
+								<th:block th:text="${#session.removeAttribute('message')}" ></th:block>
+							</div>
+							
+							
+							<form method="post" th:action="@{/verifyOtp}">
 								<div class="form-group">
 								<input name="otp" required="required" type="text" class="form-control" placeholder="Enter OTP here"/>
 								
