--- a/SmartContactManager/src/main/resources/templates/passwordChangeForm.html
+++ b/SmartContactManager/src/main/resources/templates/passwordChangeForm.html
@@ -16,9 +16,9 @@
 						
 							<h3 class="text-center mt-3">Enter New Password</h3>
 						
-							<form method="post" th:action="@{/verifyOtp}">
+							<form method="post" th:action="@{/changePassword}">
 								<div class="form-group">
-								<input name="newPassword" required="required" type="text" class="form-control" placeholder="Enter new password here"/>
+								<input name="newPassword" required="required" type="password" class="form-control" placeholder="Enter new password here"/>
 								
 								</div>
 								
