--- a/SmartContactManager/src/main/resources/templates/user/base.html
+++ b/SmartContactManager/src/main/resources/templates/user/base.html
@@ -26,6 +26,10 @@
 		src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 		crossorigin="anonymous"></script>
+		
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+		integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+		crossorigin="anonymous"></script>
 
 
 </head>
@@ -88,6 +92,8 @@
 	<!-- Optional JavaScript; choose one of the two! -->
 
 	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+	<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+	
 	<script th:src="@{/js/script.js}"></script>
 	
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -120,6 +126,8 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
 		crossorigin="anonymous"></script>
+
+	
 
 	<!-- Option 2: Separate Popper and Bootstrap JS -->
 	<!--
