--- a/SmartContactManager/src/main/resources/templates/user/user_dashboard.html
+++ b/SmartContactManager/src/main/resources/templates/user/user_dashboard.html
@@ -23,6 +23,14 @@
 					</h1>
 					
 					<a th:href="@{/user/addContact}" class="btn btn-primary mt-4 btn-block text-uppercase">Add New Contact</a>
+					
+					<h3 class="my-3">Donate Us</h3>
+					<input id="payment_field" type="text" class="form-control my-2" placeholder="Enter amount here" />
+					
+					<div class="container text-center mt-4">
+						<button onclick="paymentStart()" class="btn btn-success btn-block">Pay</button>
+					</div>
+					
 					</div>
 				</div>
 			</div>
